[gd_scene load_steps=4 format=3 uid="uid://bd3ijh7cm4dfc"]

[ext_resource type="Script" path="res://Scenes/BattleStarter/battle_starter.gd" id="1_iofss"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3546u"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7p2i"]
resource_local_to_scene = true

[node name="BattleStarter" type="Area2D"]
script = ExtResource("1_iofss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3546u")

[node name="Timer" type="Timer" parent="."]

[node name="PeaceStarter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PeaceStarter"]
shape = SubResource("RectangleShape2D_j7p2i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_exited" from="PeaceStarter" to="." method="_on_peace_starter_body_exited"]
